<resources>
    <string name="app_name">PawSitive</string>
    <string name="title_activity_create_new_account">CreateNewAccount</string>

    <string-array name="PetTypes">
        <item>Select Type</item>
        <item>Cat</item>
        <item>Dog</item>
        <item>Snake</item>
        <item>Bird</item>
    </string-array>

    <string-array name="PetGenders">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="EnergyLevels">
        <item>Select Energy Level</item>
        <item>Very Low</item>
        <item>Low</item>
        <item>Moderate</item>
        <item>High</item>
        <item>Very High</item>
    </string-array>

    <string-array name="FeedingCondition">
        <item>Select Feeding Condition</item>
        <item>Prefer Sea Food</item>
        <item>Prefer Lamb</item>
    </string-array>

    <string-array name="NumberOfWalks">
        <item>Select Number Of Walks</item>
        <item>Everyday</item>
        <item>Every 2 Days</item>
        <item>Twice A Week</item>
        <item>Once A Week</item>
    </string-array>


    <string name="title_activity_profile_page">ProfilePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="select_user">Chats</string>
    <string name="type_a_message">Type a message</string>
    <string name="enter_offer_amount">Enter offer amount</string>
    <string name="send_offer">Send Offer</string>
    <string name="deny">Deny</string>
    <string name="accept">Accept</string>
    <string name="do_you_want_to_accept_this_offer">Do you want to accept this offer?</string>
    <string name="offer_amount_x">Offer Amount: X$</string>
    <string name="offer_amount">"Offer Amount: "</string>
    <string name="location">"Location: "</string>
    <string name="username">UserName</string>
    <string name="reviews">Reviews</string>
    <string name="x_5">x/5</string>
    <string name="the_best_caretakerx_i_have_ever_seen">The best caretakerx I have ever seen!</string>
    <string name="add_job">Add Job</string>
    <string name="add_pet">Add Pet</string>
    <string name="start_date">Start Date</string>
    <string name="start_date_view">Start Date</string>
    <string name="end_date_view">End Date</string>
    <string name="your_balance_is_not_sufficient">Your Balance Is Not Sufficient!!!</string>

</resources>