<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:background="@color/material_dynamic_primary80">

    <TextView
        android:id="@+id/textOffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_accept_this_offer"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/offerAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offer_amount_x"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
         />

    <TextView
        android:id="@+id/endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date_view"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        />

    <TextView
        android:id="@+id/starDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date_view"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/textOffer"
        android:gravity="center_horizontal"
        android:layout_marginTop="64dp">

        <Button
            android:id="@+id/btnDeny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deny"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/red_color"
             />

        <Button
            android:id="@+id/btnAccept"
            android:backgroundTint="@color/dark_soft_cyan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            />
    </LinearLayout>

</RelativeLayout>
