<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/material_dynamic_primary80"
    android:padding="16dp">

    <EditText
        android:id="@+id/etOfferAmount"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/background_chat_input"
        android:hint="@string/enter_offer_amount"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/white_color"
        android:textColorHint="@color/primary_text"
        app:layout_constraintEnd_toEndOf="@id/imgDollar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgDollar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:src="@drawable/dollar_design"
        android:tint="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="@id/btnSendOffer"
        app:layout_constraintTop_toTopOf="@+id/etOfferAmount" />

    <EditText
        android:id="@+id/etStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/start_date"
        android:focusable="false"
        android:clickable="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="none"
        android:textColor="@color/white_color"
        android:textColorHint="@color/primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etOfferAmount" />

    <EditText
        android:id="@+id/etEndDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="End Date"
        android:focusable="false"
        android:clickable="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="16dp"
        android:inputType="none"
        android:textColor="@color/white_color"
        android:textColorHint="@color/primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etStartDate" />

    <Button
        android:id="@+id/btnSendOffer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/send_offer"
        android:textStyle="bold"
        android:backgroundTint="@color/dark_soft_cyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEndDate" />

</androidx.constraintlayout.widget.ConstraintLayout>
